# vlad-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
docs/: TZ.md
src/: config.py  main.py
src/brain/: claude_client.py  persona.py  tool_use_loop.py
src/data/: aura_kb.json
src/db/: memory.py  messages.py  models.py  session.py  state.py
src/files/: parser.py
src/integrations/: composio.py  figma.py  google_oauth.py  google_sheets.py  mac_bridge.py
src/skills/: chart_skill.py  docx_skill.py  pdf_skill.py  pptx_skill.py
src/telegram/: adapter.py  bot_api_adapter.py  handlers.py
src/tools/: aura_kb_tool.py  business_tools.py  chatgpt_index.py  chatgpt_memory.py  figma_tool.py  google_sheets_tool.py  image_gen.py  instagram_stats_tool.py  instagram_tools.py  mac_bridge_tool.py  memory_tools.py  model_tools.py  registry.py  skills_tools.py  web_fetch.py
src/voice/: transcriber.py
