[tool.poetry]
name = "vlad-assistant"
version = "0.1.0"
description = "Personal Telegram AI assistant (Phase I: Bot API, Phase II: userbot via MTProto)"
authors = ["Vladimir <owner@vlad-assistant.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13"
pydantic-settings = "^2.6"
python-dotenv = "^1.0"
openai = "^1.51"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
pytest = "^8.3"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
