[tool.poetry]
name = "vlad-assistant"
version = "0.5.0"
description = "Personal Telegram AI assistant — Claude as conductor with tool use"
authors = ["Vladimir <owner@vlad-assistant.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13"
pydantic-settings = "^2.6"
python-dotenv = "^1.0"
openai = "^1.51"
loguru = "^0.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
aiosqlite = "^0.20"
httpx = "^0.27"
selectolax = "^0.3"
google-auth = "^2.35"
google-api-python-client = "^2.149"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
pytest = "^8.3"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
